--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Account/Login.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
     <link href="@Url.Content("~/Assets/font-awesome/css/font-awesome.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Assets/application/css/login.css")" rel="stylesheet" />
 
-    <script src="@Url.Content("~/Assets/jquery/jquery-3.3.1.js")"></script>
+    <script src="@Url.Content("~/Assets/jquery/jquery-3.3.1.min.js")"></script>
 </head>
 <body>
     <div class="container col-md-offset-3">
@@ -87,9 +87,9 @@
         });
     </script>
 
-    <script src="@Url.Content("~/Assets/Scripts/Bootstrap/bootstrap.js")"></script>
-    <script src="@Url.Content("~/Assets/Scripts/Jquery/jquery.validate.min.js")"></script>
-    <script src="@Url.Content("~/Assets/Scripts/Jquery/jquery.validate.unobtrusive.min.js")"></script>
-    <script src="@Url.Content("~/Assets/Scripts/JQuery/jquery.unobtrusive-ajax.js")"></script>
+    <script src="@Url.Content("~/Assets/bootstrap/js/bootstrap.min.js")"></script>
+    <script src="@Url.Content("~/Assets/jquery/jquery.validate.js")"></script>
+    <script src="@Url.Content("~/Assets/jquery/jquery.validate.unobtrusive.js")"></script>
+    <script src="@Url.Content("~/Assets/jquery/jquery.unobtrusive-ajax.js")"></script>
 </body>
 </html>
