--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_MsgPartial.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_MsgPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Helpers.Response
+﻿@model WebMigradorCtasPorCobrar.Models.Helpers.Response
 
 <div class="col-md-12" style="display:none" id="loading">
     <h6>Espere un momento...</h6>
