--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="table-responsive" style="min-height:300px">
+<div class="table-responsive" style="min-height:300px; font-size: 13px;">
     @Html.Grid(Model).Columns(columns =>
     {
         columns.Add(c => c.Cuota_pago).Titled("Codigo").Filterable(true);
@@ -29,26 +29,23 @@
         columns.Add(c => c.Codigo_bnc).Css("text-center").Titled("Cod. BNC").Filterable(true);
         columns.Add(c => c.Fch_venc).Css("text-center").RenderValueAs(model => model.Fch_venc.ToShortDateString()).Titled("Fec. Venc").Filterable(true);
         columns.Add(c => c.Prioridad).Css("text-center").Titled("Prioridad").Filterable(true);
-        columns.Add(c => c.C_mora).Css("text-center").Encoded(false).Sanitized(false)
-                .RenderValueAs(model => model.C_mora ? Html.Raw("<span class=\"badge badge-pill badge-info\">Si</span>") : Html.Raw("<span class=\"badge badge-pill badge-secondary\">No</span>"))
-                .Titled("Mora").Filterable(true);
-        columns.Add(c => c.Eliminado).Css("text-center").Encoded(false).Sanitized(false)
-                .RenderValueAs(model => model.Eliminado ? Html.Raw("<span class=\"badge badge-pill badge-warning\">Si</span>") : Html.Raw("<span class=\"badge badge-pill badge-secondary\">No</span>"))
-                .Titled("Eliminado").Filterable(true);
-        columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false)
-                .RenderValueAs(model => model.B_Migrable ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>") : Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
-                .Titled("Migrable").Filterable(true);
-        columns.Add(c => c.B_Migrado).Css("text-center").Encoded(false).Sanitized(false)
-                .RenderValueAs(model => model.B_Migrado ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>") : Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
-                .Titled("Migrado").Filterable(true);
+        columns.Add(c => c.C_mora).Css("text-center").Encoded(false).Sanitized(false).Titled("Mora").Filterable(true)
+                .RenderValueAs(model => model.C_mora ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-info\"></i></span>")
+                                                     : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-secondary\"></i></span>"));
+        columns.Add(c => c.Eliminado).Css("text-center").Encoded(false).Sanitized(false).Titled("Eliminado").Filterable(true)
+                .RenderValueAs(model => model.Eliminado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-warning\"></i></span>")
+                                                        : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-secondary\"></i></span>"));
+        columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrable").Filterable(true)
+                .RenderValueAs(model => model.B_Migrable ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                         : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
+        columns.Add(c => c.B_Migrado).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrado").Filterable(true)
+                .RenderValueAs(model => model.B_Migrado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                        : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
         columns.Add().SetWidth(120).Css("text-right").Encoded(false).Sanitized(false)
-                    .RenderValueAs(model => model.B_Migrable ?
-                                        @Html.Raw("")
-                                        : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "CuotaPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link\"><i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observacion</span></a>"));
-        columns.Add().Css("text-right").Encoded(false).Sanitized(false)
-                        .RenderValueAs(model => model.B_Migrable ?
-                                            @Html.Raw("")
-                                            : @Html.Raw($"<a href=\"{ Url.Action("Editar", "CuotaPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link\"><i class=\"fa fa-pencil-square-o\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Corregir</span></a>"));
+                    .RenderValueAs(model => model.B_Migrable ? @Html.Raw("")
+                                                             : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "CuotaPago", new { id = model.I_RowID, area = "" })}\" class=\"modal-link-lg\">" +
+                                                                            $"<i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observacion</span>" +
+                                                                         $"</a>"));
     }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
 </div>
