--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_TemporalPagos.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_TemporalPagos.cshtml
@@ -2,21 +2,21 @@
 @model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.TemporalPagos.CuotaPago>
 @using GridMvc.Html
 
-<div class="table-responsive" style="min-height:300px">
+<div class="table-responsive" style="min-height:300px; font-size:13px;">
     @Html.Grid(Model).Columns(columns =>
 {
-    columns.Add(c => c.Cuota_pago).Titled("Codigo").Filterable(true);
-    columns.Add(c => c.Descripcio).Titled("Descripción").Filterable(true);
-    columns.Add(c => c.Fch_venc).Css("text-center").Titled("Fec. Venc").Filterable(true);
+    columns.Add(c => c.Cuota_pago).Filterable(true);
+    columns.Add(c => c.Descripcio).Filterable(true);
+    columns.Add(c => c.Fch_venc).Css("text-center").Filterable(true);
     columns.Add(c => c.N_cta_cte).Titled("Nro. Cuenta").Filterable(true);
-    columns.Add(c => c.Codigo_bnc).Css("text-center").Titled("Codigo BNC").Filterable(true);
-    columns.Add(c => c.Prioridad).Css("text-center").Titled("Prioridad").Filterable(true);
-    columns.Add(c => c.C_mora).Css("text-center").Encoded(false).Sanitized(false)
-            .RenderValueAs(model => model.C_mora ? Html.Raw("<span class=\"badge badge-pill badge-info\">Si</span>") : Html.Raw("<span class=\"badge badge-pill badge-secondary\">No</span>"))
-            .Titled("Mora").Filterable(true);
-    columns.Add(c => c.Eliminado).Css("text-center").Encoded(false).Sanitized(false)
-            .RenderValueAs(model => model.Eliminado ? Html.Raw("<span class=\"badge badge-pill badge-warning\">Si</span>") : Html.Raw("<span class=\"badge badge-pill badge-secondary\">No</span>"))
-            .Titled("Eliminado").Filterable(true);
+    columns.Add(c => c.Codigo_bnc).Css("text-center").Filterable(true);
+    columns.Add(c => c.Prioridad).Css("text-center").Filterable(true);
+    columns.Add(c => c.C_mora).Css("text-center").Encoded(false).Sanitized(false).Filterable(true)
+            .RenderValueAs(model => model.C_mora ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                 : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-secondary\"></i></span>"));
+    columns.Add(c => c.Eliminado).Css("text-center").Encoded(false).Sanitized(false).Filterable(true)
+            .RenderValueAs(model => model.Eliminado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-warning\"></i></span>")
+                                                    : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-secondary\"></i></span>"));
 }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
 </div>
