actualizacion de vistas

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/Index.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/Index.cshtml
@@ -46,8 +46,8 @@
             <div class="col-md-2">
                 <fieldset>
                     <legend class="pb-3">OPCIONES</legend>
-                    <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Index", "Estudiante", new { procedencia = procedencia_value, partial = "ProcesoMigracion" })">Proceso de migración</a>
                     <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Index", "Estudiante", new { procedencia = procedencia_value, partial = "TemporalPagos" })">Temporal de pagos</a>
+                    <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Index", "Estudiante", new { procedencia = procedencia_value, partial = "ProcesoMigracion" })">Proceso de migración</a>
                     <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Index", "Estudiante", new { procedencia = procedencia_value, partial = "DatosMigracion" })">Registros para migración</a>
                 </fieldset>
             </div>
@@ -57,9 +57,7 @@
                     <div class="jumbotron" style="min-height: 450px">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Seleccione una opción</h5>
                             </div>
                         </div>
                     </div>
