--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-12" id="tabla-errores">
             <table class="table">
-                <thead>
+                <thead class="thead-light">
                     <tr>
                         <th>Tipo</th>
                         <th>Descripción</th>
@@ -26,15 +26,14 @@
                             <td style="width:450px">@item.T_ObservDesc</td>
                             <td style="width:180px">@item.D_FecRegistro</td>
                             <td style="width:90px" class="text-right">
-                                <a class="link-editar" href="javascript:;" data-url="@Url.Action("Editar","CuotaPago", new { id = item.I_FilaTablaID, obsID = item.I_ObservID})"><i class="fa fa-pencil-square-o"></i> Corregir</a>
+                                <a class="link-editar" href="javascript:;" data-url="@Url.Action("Editar",ViewBag.Controller, new { id = item.I_FilaTablaID, obsID = item.I_ObservID })"><i class="fa fa-pencil-square-o"></i> Corregir</a>
                             </td>
                         </tr>
                     }
                 </tbody>
             </table>
         </div>
-        <div class="col-12" id="edit-target" style="display:none;"> 
-            <button type="button" class="btn btn-secondary" id="btnCancel"><i class="fa fa-times-circle-o">&nbsp;</i>Cancelar</button>
+        <div class="col-12" id="edit-target" style="display:none;">
         </div>
     </div>
 </div>
@@ -60,10 +59,5 @@
                 $('#tabla-errores').show()
             }
         })
-    })
-
-    $('#btnCancel').on('click', function () {
-        $('#edit-target').hide()
-        $('#tabla-errores').show()
     })
 </script>
