--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
@@ -7,7 +7,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <div class="row">
+    <div class="row" id="div_msg">
         <div class="col-12" id="tabla-errores">
             <table class="table">
                 <thead class="thead-light">
