--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarEquivalencia.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarEquivalencia.cshtml
@@ -1,111 +1,109 @@
 ﻿
-
 @model WebMigradorCtasPorCobrar.Models.Entities.Migracion.CuotaPago
-
 @Scripts.Render("~/bundles/jqueryval")
 
-@using (Ajax.BeginForm("Save", "Estudiante", new { area = "" }, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "div_msg", OnBegin = "Load", OnSuccess = "Submited", OnComplete = "Stop" }))
-{
-    @Html.Hidden("submited", 0)
-    @Html.AntiForgeryToken()
-    <div class="modal-body">
-        <div class="container-fluid">
-            @Html.HiddenFor(model => model.I_RowID)
-
-            <div class="form-row">
-                @Html.Label("Cod. Cuota", new { @class = "col-md-4 col-form-label", @for = "Cuota_pago" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(model => model.Cuota_pago, new { @class = "form-control" })
-                    <p class="text-danger small">@Html.ValidationMessageFor(model => model.Cuota_pago)</p>
-                </div>
-            </div>
-            <div class="form-row">
-                @Html.Label("Descripción", new { @class = "col-md-4 col-form-label", @for = "Descripción" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(model => model.Descripcio, new { @class = "form-control" })
-                    <p class="text-danger small">@Html.ValidationMessageFor(model => model.Descripcio)</p>
-                </div>
-            </div>
-            <div class="form-row">
-                @Html.Label("Codigo bnc", new { @class = "col-md-4 col-form-label", @for = "I_Periodo" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(model => model.Codigo_bnc, new { @class = "form-control" })
-                    <p class="text-danger small">@Html.ValidationMessageFor(model => model.Codigo_bnc)</p>
-                </div>
-            </div>
-            <div class="form-row">
-                @Html.Label("Prioridad", new { @class = "col-md-4 col-form-label", @for = "Prioridad" })
-                <div class="col-md-8">
-                    @Html.TextBoxFor(model => model.Prioridad, new { @class = "form-control" })
-                    <p class="text-danger small">@Html.ValidationMessageFor(model => model.Prioridad)</p>
-                </div>
-            </div>
-            <div class="form-row">
-                @Html.Label("Año", new { @class = "col-md-4 col-form-label" })
-                <div class="col-md-4">
-                    @Html.TextBoxFor(model => model.I_Anio, new { @class = "form-control", @for = "I_Anio" })
-                    <p class="text-danger small">@Html.ValidationMessageFor(model => model.I_Anio)</p>
-                </div>
-            </div>
-            <div class="form-row">
-                @Html.Label("Periodo", new { @class = "col-md-4 col-form-label", @for = "I_Periodo" })
-                <div class="col-md-4">
-                    @Html.TextBoxFor(model => model.I_Periodo, new { @class = "form-control" })
-                    <p class="text-danger small"></p>
-                </div>
-            </div>
-            @*<div class="form-row">
-                    @Html.Label("Código", new { @class = "col-md-4 col-form-label" })
-                    <div class="col-md-4">
-                        @Html.TextBoxFor(model => model.C_CodAlu, new { @class = "form-control" })
-                        <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_CodAlu)</p>
-                    </div>
-                </div>
-                <div class="form-row">
-                    @Html.Label("Año de ingreso", new { @class = "col-md-4 col-form-label" })
-                    <div class="col-md-4">
-                        @Html.TextBoxFor(model => model.C_AnioIngreso, new { @class = "form-control" })
-                        <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_AnioIngreso)</p>
-                    </div>
-                </div>
-                <div class="form-row">
-                    @Html.Label("Mod ingreso", new { @class = "col-md-4 col-form-label" })
-                    <div class="col-md-4">
-                        @Html.TextBoxFor(model => model.C_CodModIng, new { @class = "form-control" })
-                        <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_CodModIng)</p>
-                    </div>
-                </div>
-                <div class="form-row">
-                    @Html.Label("Carrera", new { @class = "col-md-4 col-form-label" })
-                    <div class="col-md-4">
-                        @Html.TextBoxFor(model => model.C_RcCod, new { @class = "form-control" })
-                        <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_RcCod)</p>
-                    </div>
-                </div>*@
-
-        </div>
-    </div>
-    <div class="col-md-12" style="display:none" id="loading">
-        <h6>Actualizando los datos...</h6>
-
-        <div class="progress">
-            <div class="indeterminate"></div>
-        </div>
-    </div>
-
-    <button type="submit" class="btn btn-primary" id="btnsubmit"><i class="fa fa-save"></i>&nbsp;Guardar</button>
+@{
+    string tipoObs = ViewBag.TipoObserv;
+    string observ_descrip = ViewBag.Observacion;
 }
 
+<div class="col-12">
+    <div class="row">
+        <div class="col-12">
+            @using (Ajax.BeginForm("Save", "CuotaPago", new { area = "" }, new AjaxOptions { HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "div_msg", OnBegin = "Load", OnSuccess = "Submited", OnComplete = "Stop" }))
+            {
+                @Html.Hidden("submited", 0)
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.I_RowID)
+                @Html.Hidden("tipoObserv", tipoObs)
+
+                <div class="form-row">
+                    <div class="form-group col-md-3 col-4">
+                        @Html.Label("Código Cuota", new { @class = "col-form-label", @for = "Cuota_pago" })
+                        @Html.TextBoxFor(model => model.Cuota_pago, new { @class = "form-control form-control-sm-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-md-6 col-5">
+                        @Html.Label("Descripción", new { @class = "col-form-label", @for = "Descripción" })
+                        @Html.TextBoxFor(model => model.Descripcio, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-md-3 col-3">
+                        @Html.Label("Código bnc", new { @class = "col-form-label", @for = "Codigo_bnc" })
+                        @Html.TextBoxFor(model => model.Codigo_bnc, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-3 col-4">
+                        @Html.Label("Fecha Vencto", new { @class = "col-form-label", @for = "Fch_venc" })
+                        @Html.TextBoxFor(model => model.Fch_venc_s, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-md-6 col-5">
+                        @Html.Label("Categoría (Equivalencia)", new { @class = "col-form-label", @for = "I_CatPagoID" })
+                        @Html.DropDownListFor(model => model.I_CatPagoID, ViewBag.CategoriasBnc as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
+                    </div>
+                    <div class="form-group col-md-3 col-3">
+                        <label>&nbsp;</label>
+                        <div class="form-check px-5 pt-2">
+                            @Html.CheckBoxFor(model => model.C_mora, new { @class = "form-check-input", disabled = "true" })
+                            @Html.Label("Mora", new { @class = "col-check-label" })
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-3">
+                        @Html.Label("Año", new { @class = "col-form-label" })
+                        @Html.TextBoxFor(model => model.I_Anio, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-3">
+                        @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
+                        @Html.TextBoxFor(model => model.I_Periodo, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-3">
+                        @Html.Label("Prioridad", new { @class = "col-md-4 col-form-label", @for = "Prioridad" })
+                        @Html.TextBoxFor(model => model.Prioridad, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-3">
+                        @Html.Label("Procedencia", new { @class = "col-md-4 col-form-label" })
+                        @Html.TextBoxFor(model => model.I_ProcedenciaID, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                </div>
+
+                <div class="col-md-12" style="display:none" id="loading">
+                    <h6>Actualizando los datos...</h6>
+
+                    <div class="progress">
+                        <div class="indeterminate"></div>
+                    </div>
+                </div>
+                <div class="d-inline my-3">
+                    <a id="btnCancel" href="javascript:;" class="btn btn-outline-secondary float-left"><i class="fa fa-arrow-circle-left"></i>&nbsp;Atrás</a>
+                    <button type="submit" class="btn btn-primary float-right" id="btnsubmit"><i class="fa fa-save"></i>&nbsp;Guardar</button>
+                </div>
+            }
+        </div>
+    </div>
+    <div class="row mt-4">
+        @Html.Partial("_OtrasTablas", Model);
+    </div>
+</div>
+
+
 <script>
-    $(document).on('ready', function () {
-        $('#btnsubmit').removeClass('disabled');
-    });
+    $('#error_descrip').html('@observ_descrip');
 
     $("form").submit(function () {
         if (parseInt($("#submited").val()) > 0) {
             return false;
         }
+        else {
+            $('#error_descrip').html('');
+        }
     });
+
+    $('#btnCancel').on('click', function () {
+        $('#edit-target').hide()
+        $('#tabla-errores').show()
+        $('#error_descrip').html('');
+    })
 
 </script>
 
