--- a/publicacion/Views/Shared/_Observaciones.cshtml
+++ b/publicacion/Views/Shared/_Observaciones.cshtml
@@ -1,16 +1,18 @@
 ﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.Migracion.Observacion>
 
 <div class="modal-header">
-    <h5 class="modal-title">Observaciones:</h5>
+    <h5 class="modal-title">
+        Observaciones: <span id="error_descrip" class="d-inline-block text-truncate1" style="font-size:1rem; vertical-align: text-bottom;"></span>
+    </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <div class="row">
+    <div class="row" id="div_msg">
         <div class="col-12" id="tabla-errores">
             <table class="table">
-                <thead>
+                <thead class="thead-light">
                     <tr>
                         <th>Tipo</th>
                         <th>Descripción</th>
@@ -26,17 +28,20 @@
                             <td style="width:450px">@item.T_ObservDesc</td>
                             <td style="width:180px">@item.D_FecRegistro</td>
                             <td style="width:90px" class="text-right">
-                                <a class="link-editar" href="javascript:;" data-url="@Url.Action("Editar","CuotaPago", new { id = item.I_FilaTablaID, obsID = item.I_ObservID})"><i class="fa fa-pencil-square-o"></i> Corregir</a>
+                                <a class="link-editar" href="javascript:;" data-url="@Url.Action("Editar",ViewBag.Controller, new { id = item.I_FilaTablaID, obsID = item.I_ObservID })"><i class="fa fa-pencil-square-o"></i> Corregir</a>
                             </td>
                         </tr>
                     }
                 </tbody>
             </table>
         </div>
-        <div class="col-12" id="edit-target" style="display:none;"> 
-            <button type="button" class="btn btn-secondary" id="btnCancel"><i class="fa fa-times-circle-o">&nbsp;</i>Cancelar</button>
+        <div class="col-12" id="edit-target" style="display:none;">
         </div>
     </div>
+    <div id="processing" class="container-fluid" style="display:none;">
+        <p style="margin:50px;" class="text-center text-muted"><i class="fa fa-spin fa-3x fa-cog"></i></p>
+    </div>
+
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -50,6 +55,7 @@
             type: 'GET',
             cache: false,
             beforeSend: function () {
+                $('#processing').show();
                 $('#tabla-errores').hide()
             },
             success: function (data) {
@@ -58,12 +64,11 @@
             },
             error: function () {
                 $('#tabla-errores').show()
+            },
+            complete: function () {
+                $('#processing').hide();
             }
-        })
-    })
 
-    $('#btnCancel').on('click', function () {
-        $('#edit-target').hide()
-        $('#tabla-errores').show()
+        })
     })
 </script>
