--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarPeriodo.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_EditarPeriodo.cshtml
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
-                        @Html.TextBoxFor(model => model.I_Periodo, new { @class = "form-control form-control-sm" })
+                        @Html.DropDownListFor(model => model.I_Periodo, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Prioridad", new { @class = "col-md-4 col-form-label", @for = "Prioridad" })
