modulo de correccion conceptos

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
@@ -31,7 +31,7 @@
                         @Html.TextBoxFor(model => model.Descripcio, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                 </div>
-                <div class="form-row">
+                @*<div class="form-row">
                     <div class="form-group col-md-3 col-4">
                         @Html.Label("Fecha Vencto", new { @class = "col-form-label", @for = "Fch_venc" })
                         @Html.TextBoxFor(model => model.Fch_venc_s, new { @class = "form-control form-control-sm", @readonly = "true" })
@@ -65,7 +65,7 @@
                         @Html.Label("Procedencia", new { @class = "col-md-4 col-form-label" })
                         @Html.TextBoxFor(model => model.I_ProcedenciaID, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
-                </div>
+                </div>*@
 
                 <div class="col-md-12" style="display:none" id="loading">
                     <h6>Actualizando los datos...</h6>
